# verman-schema-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: constants.rs  error.rs  errors.rs  lib.rs  models.rs  test_models.rs  test_verman_schema.rs  utils.rs  verman.json  verman.toml  verman_schema.rs
src/commands/: command.rs  lib.rs  shared.rs
src/commands/echo/: echo.rs  echo_test.rs
src/commands/env/: env.rs  env_test.rs
src/commands/http_client/: http_client.rs  http_client_test.rs
src/commands/interpolate/: interpolate.rs  interpolate_test.rs
src/commands/jaq/: jaq.rs  jaq_test.rs  jaq_utils.rs
src/commands/set_env/: set_env.rs  set_env_test.rs
src/commands/shebang/: shebang.rs
src/pipeline/: pipeline.rs  pipeline_test.rs
src/task/: task.rs  task_test.rs
