[package]
name = "verman-schema-rs"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0.116"
serde_derive = "1.0.199"
indexmap = { version = "2.2.6", features = ["serde"] }
toml = { version = "0.8.12", features = ["preserve_order"] }
void = "1.0.2"
